added more languages, link to dashboard

--- a/home/public/partials/add.html
+++ b/home/public/partials/add.html
@@ -28,6 +28,9 @@
                             <option value="de_DE">{{'LANG_DE'|translate}}</option>
                             <option value="en_US">{{'LANG_EN'|translate}}</option>
                             <option value="fr_FR">{{'LANG_FR'|translate}}</option>
+                            <option value="tr_TR">{{'LANG_TR'|translate}}</option>
+                            <option value="fa_AF">{{'LANG_AF'|translate}}</option>
+                            <option value="ar_SY">{{'LANG_AR'|translate}}</option>
                         </select>
                     </div>
                     <div class="input-field col s3">
@@ -55,6 +58,9 @@
                             <option value="de_DE">{{'LANG_DE'|translate}}</option>
                             <option value="en_US">{{'LANG_EN'|translate}}</option>
                             <option value="fr_FR">{{'LANG_FR'|translate}}</option>
+                            <option value="tr_TR">{{'LANG_TR'|translate}}</option>
+                            <option value="fa_AF">{{'LANG_AF'|translate}}</option>
+                            <option value="ar_SY">{{'LANG_AR'|translate}}</option>
                         </select>
                     </div>
                     <div class="input-field col s4 push-s4">
