--- a/home/public/partials/categorydetails.html
+++ b/home/public/partials/categorydetails.html
@@ -56,6 +56,9 @@
                         <option value="de_DE">{{'LANG_DE'|translate}}</option>
                         <option value="en_US">{{'LANG_EN'|translate}}</option>
                         <option value="fr_FR">{{'LANG_FR'|translate}}</option>
+                        <option value="tr_TR">{{'LANG_TR'|translate}}</option>
+                        <option value="fa_AF">{{'LANG_AF'|translate}}</option>
+                        <option value="ar_SY">{{'LANG_AR'|translate}}</option>
                     </select>
                 </div>
             </div>
