--- a/home/public/partials/header-navigation.html
+++ b/home/public/partials/header-navigation.html
@@ -66,7 +66,6 @@
         <div class="divider"></div>
         <div id="nav-items" class="white">
             <li><a class="waves-effect waves-orange" href="#/dashboard">{{'NAVBAR_DASHBTN'|translate}}</a></li>
-            <li><a class="waves-effect waves-orange" href="#/add">{{'NAVBAR_ADDBTN'|translate}}</a></li>
             <li><a class="waves-effect waves-orange" href="#/list">{{'NAVBAR_LISTBTN'|translate}}</a></li>
             <li class="no-padding">
                 <ul class="collapsible">
@@ -75,7 +74,8 @@
                             <ul>
                                 <li><a class="waves-effect waves-orange" href="/api">/api/</a></li>
                                 <li><a class="waves-effect waves-orange" href="/api/v1">/api/v1</a></li>
-                                <li><a class="waves-effect waves-orange" href="/api/v1/">/api/v1/guides</a></li>
+                                <li><a class="waves-effect waves-orange" href="/api/v1/guides">/api/v1/guides</a></li>
+                                <li><a class="waves-effect waves-orange" href="/api/v1/categories">/api/v1/categories</a></li>
                             </ul>
                         </div>
                     </li>
