--- a/home/public/partials/guidedetails.html
+++ b/home/public/partials/guidedetails.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
-        <a class="col s6 btn btn-block waves-effect waves-orange" ng-class="{disabled:!loadedData}" ng-click="detailCtrl.addTranslation()">{{'DETAIL_ADD_TRANSLATION'|translate}}</a>
-        <a class="col s6 btn btn-block waves-effect waves-orange red darken-3" ng-class="{disabled:!loadedData}" ng-click="detailCtrl.deleteGuide()">{{'DETAIL_DELETE'|translate}}</a>
+        <a class="col s6 btn btn-block waves-effect waves-orange" ng-class="{disabled:!loadedData}" ng-click="detailCtrl.addTranslation()" ng-show="authService.getRole() > 1">{{'DETAIL_ADD_TRANSLATION'|translate}}</a>
+        <a class="col s6 btn btn-block waves-effect waves-orange red darken-3" ng-class="{disabled:!loadedData}" ng-click="detailCtrl.deleteGuide()" ng-show="authService.getRole() > 2">{{'DETAIL_DELETE'|translate}}</a>
     </div>
     <div class="row" ng-hide="loadedData">
         <div class="col s1 push-s5">
@@ -35,8 +35,10 @@
                     </p>
                 </div>
                 <div class="card-action">
-                    <a class="waves-effect waves-orange" href="" ng-click="detailCtrl.editTranslation($index)">{{'DETAIL_EDIT'|translate}}</a>
-                    <a class="waves-effect waves-orange" href="" ng-click="detailCtrl.removeTranslation($index)">{{'DETAIL_DELETE'|translate}}</a>
+                    <a class="waves-effect waves-orange" href="" ng-click="detailCtrl.editTranslation($index)"
+                    ng-show="authService.getRole() > 1">{{'DETAIL_EDIT'|translate}}</a>
+                    <a class="waves-effect waves-orange" href="" ng-click="detailCtrl.removeTranslation($index)"
+                    ng-show="authService.getRole() > 1">{{'DETAIL_DELETE'|translate}}</a>
                     <a class="waves-effect waves-orange right" href="" ng-click="detailCtrl.publish($index)" ng-show="authService.getRole() > 2">{{'DETAIL_PUBLISH'|translate}}</a>
                 </div>
             </li>
