--- a/home/public/partials/guidelist.html
+++ b/home/public/partials/guidelist.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="btn col s12" ng-click="glistCtrl.addGuide()">{{'ADD_GUIDELINE_BTN'|translate}}</div>
+        <div class="btn col s12" ng-click="glistCtrl.addGuide()" ng-show="authService.getRole() > 1">{{'ADD_GUIDELINE_BTN'|translate}}</div>
     </div>
     <div class="row">
         <ul class="collection with-header">
