--- a/home/public/partials/list.html
+++ b/home/public/partials/list.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-    <div class="btn col s12" ng-click="listCtrl.addCategory()">{{'ADD_CATEGORY_BTN'|translate}}</div>
+    <div class="btn col s12" ng-click="listCtrl.addCategory()" ng-show="authService.getRole() > 1">{{'ADD_CATEGORY_BTN'|translate}}</div>
     </div>
     <div class="row">
     <ul class="collection with-header">
